# bevy_economy

./: .gitignore  Cargo.toml  Makefile.toml  README.md
archive/: Cargo.toml
archive/examples/: test_sqlite.rs
archive/src/: create_tables.sql  sqlite_economy_store.rs  tables.rs
archive/tmp/: db.sqlite
examples/: small_market.rs  test_sqlite.rs
src/: create_tables.sql  lib.rs  models.rs  tables.rs
tmp/: db.sqlite
