[package]
name = "bevy_economy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
average = "0.13.1"
bevy = "0.9.1"
float-ord = "0.3.2"
rand = "0.8.5"
tokio = { version = "1.23.0", features = ["full"] }
diesel = { version = "2.0.2", features = ["sqlite"] }
anyhow = "1.0.66"

[dev-dependencies]
cargo-make = { version = "0.36.3", default-features = false }
diesel_cli = { version = "2.0.1", default-features = false, features = [
  "sqlite",
] }

# [profile.dev.package."*"]
# opt-level = 3

# [profile.dev]
# opt-level = 0
# opt-level = 3

[[example]]
name = "small_market"

[[example]]
name = "test_sqlite"
